IOS Fix Attempt 5 z-index

--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,7 @@ footer {
 	margin: auto;
 	width: 8.33rem;
 	height: 11.67rem;
+	z-index: 0;
 
 	background-color: white;
 	border-radius: .5rem;
@@ -380,11 +381,16 @@ footer {
 }
 
 .front {
+	z-index: -1;
 	transform: rotateY(180deg);
 	-webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
   	-ms-transform: rotateY(180deg);
   	-o-transform: rotateY(180deg);
+}
+
+.back {
+	z-index: 1;
 }
 
 /* Classes */
